tests/ui/resolve/path-suggestion-duplicated-crate-keyword.stderr
error[E0433]: cannot find `linux` in `crate`
  --> $DIR/path-suggestion-duplicated-crate-keyword.rs:10:33
   |
LL |                 let _x = crate::linux::system::Y;
   |                                 ^^^^^ unresolved import
   |
help: a similar path exists
   |
LL |                 let _x = crate::unix::linux::system::Y;
   |                                 ++++++
help: consider importing this module
   |
LL +             use unix::linux::system;
   |
help: if you import `system`, refer to it directly
   |
LL -                 let _x = crate::linux::system::Y;
LL +                 let _x = system::Y;
   |

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0433`.
